--- a/client/main.html
+++ b/client/main.html
@@ -34,7 +34,7 @@
 
   <h1>Lets set up your profile</h1>
 
-  <h2>Login</h2>
+  <h2>Profile Peferences</h2>
     <form class="login">
         <p>Homecounty: <input type="homecounty" name="homecounty"></p>
         <p>Language: <input type="language" name="language"></p>
@@ -61,6 +61,7 @@
 <template name="login">
     <h2>Login</h2>
     <form class="login">
+      <p>Username: <input type="username" name="username"></p>
         <p>Email: <input type="email" name="email"></p>
         <p>Password: <input type="password" name="password"></p>
         <p><input type="submit" value="Login"></p>
@@ -70,93 +71,134 @@
 <template name="register">
     <h2>Register</h2>
     <form class="register">
+        <p>Username: <input type="username" name="username"></p>
         <p>Email: <input type="email" name="email"></p>
         <p>Password: <input type="password" name="password"></p>
         <p><input type="submit" value="Register"></p>
     </form>
 </template>
 
-<!-- <template name="showList">
-    <h2>Room list</h2>
-    <form class="new-country">
-    <div class="input-group">
-      <input type="text" name="text" class="form-control" placeholder="Enter Country" />
-      <span class="input-group-btn">
-        <button class="btn btn-info send" type="submit">SEND</button>
-      </span>
-    </div>
-  </form>
-  <!- {{#each getRoomname}}
-  test
-  {{/each}} -->
-
-<!--
-</template> -->
-
-<template name = "showRooms">
-<h2>Room list</h2>
+<template name = "rooms">
+  <h2>Room list</h2>
   <ul>
-      {{#each room}}
-          <li>{{>roomItem}}</li>
+      {{#each rooms}}
+          <li>{{>room}}</li>
       {{/each}}
       </ul>
       {{>addRoom}}
 </template>
 
-<template name="roomItem">
-    <li>{{name}}
-    [<a href="#" class="delete-room">Delete</a>]
-    </li>
+<template name="room">
+    <li style="cursor: pointer; {{roomstyle}}">{{roomname}}</li>
+      <!-- [<a href="#" class="delete-room">Delete</a>] -->
 </template>
 
 <template name="addRoom">
     <form>
         Create a room:
-        <input type="text" placeholder="Type a name here..." name="roomName">
+        <input type="text" placeholder="Type a name here..." roomname="roomName">
     </form>
 </template>
 
- <template name="chat">
-
+<!-- <template name="chat">
     <div class="container">
-     <div class="row">
-       <div class = "col-md-4">
-        {{>showRooms}}
-       </div>
-       <div class="col-md-8">
-         <h3 class="text-center" >SIMPLE METEOR CHAT</h3>
-         <h5 class="text-center text-muted">Sign in to join!</h5>
-         <div class="panel panel-info">
-           <div class="panel-heading">
-             GROUP CHAT
-           </div>
-           <div class="panel-body">
-             <ul class="media-list">
-               <!-- message template -->
-               {{#each messages}}
-                 {{> message}}
-               {{/each}}
-             </ul>
-           </div>
-           <!-- message textbox -->
-           {{#if currentUser}}
 
-           <form class="new-message">
-             <div class="panel-footer">
-               <div class="input-group">
-                 <input type="text" name="text" class="form-control" placeholder="Enter Message" />
-                 <span class="input-group-btn">
-                   <button class="btn btn-info send" type="submit">SEND</button>
-                 </span>
-               </div>
-             </div>
-           </form>
+        {{#if currentUser}}
+        <div class="row-fluid">
+            <div class="span12 well">
+                {{> input}}
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="span8 well">
+                {{> messages}}
+            </div>
+            <div class="span4 well">
+                {{> rooms}}
+            </div>
+        </div>
+        {{else}}
+        <div class="hero-unit">
+            <h1>Welcome to MeteorChat</h1>
+            <p>Please login!</p>
+        </div>
+        {{/if}}
+    </div>
+</template> -->
+<template name="chat">
+   <div class="container">
+    <div class="row">
+      <div class = "col-md-4">
+       {{>rooms}}
+      </div>
+      <div class="col-md-8">
+        <h3 class="text-center" >SIMPLE METEOR CHAT</h3>
+        <h5 class="text-center text-muted">Sign in to join!</h5>
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            GROUP CHAT
+          </div>
+          <div class="panel-body">
+            <ul class="media-list">
+              <!-- message template -->
+              {{> messages}}
+            </ul>
+          </div>
+          <!-- message textbox -->
+          {{#if currentUser}}
 
-           {{/if}}
-         </div>
-       </div>
+          {{> input}}
 
-     </div>
+          {{/if}}
+        </div>
+      </div>
 
-   </div>
+    </div>
+
+  </div>
+</template>
+
+<template name="input">
+  <form class="new-message">
+    <div class="panel-footer">
+      <div class="input-group">
+        <input type="text" id="msg" name="text" class="form-control" placeholder="Enter Message" />
+        <span class="input-group-btn">
+          <input type="button" value="Send message" class="btn btn-primary sendMsg">
+        </span>
+      </div>
+    </div>
+  </form>
+</template>
+
+<template name="messages">
+    <h4>Room: {{roomname}}</h4>
+    <div id="messages" style="background-color: #ffffff; border: 1px solid darkgray; max-height: 200px; overflow: auto">
+        {{#each messages}}
+            {{> message}}
+        {{/each}}
+    </div>
+</template>
+
+<!-- <template name="message">
+    <p><strong>{{user}}</strong> <span style="font-size: 0.7em; color: darkgray">({{timestamp}})</span>: <i>{{msg}}</i></p>
+</template> -->
+
+
+<template name="message">
+  <li class="media">
+    <div class="media-body">
+      <div class="media">
+        <a class="pull-left" href="#">
+        <img class="media-object img-circle img-responsive" src="http://www.karinakurman.com/profile_icon.png" />
+        </a>
+        <div class="media-body" >
+          {{msg}}
+         <br />
+         <small class="text-muted"><strong>{{username}}</strong> ({{timestamp}})</small>
+         <hr />
+        </div>
+      </div>
+    </div>
+  </li>
 </template>
