--- a/imports/ui/message.html
+++ b/imports/ui/message.html
@@ -1,4 +1,4 @@
- <template name="message">
+ <!-- <template name="message">
    <li class="media">
      <div class="media-body">
        <div class="media">
@@ -14,4 +14,4 @@
        </div>
      </div>
    </li>
- </template>
+ </template> -->
