--- a/imports/ui/message.html
+++ b/imports/ui/message.html
@@ -8,7 +8,7 @@
          <div class="media-body" >
            {{text}}
           <br />
-          <small class="text-muted"><strong>{{username}}</strong> | {{createdAt}}</small>
+          <small class="text-muted"><strong>{{email}}</strong> | {{createdAt}}</small>
           <hr />
          </div>
        </div>
