--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <title>My Simple Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 </head>
 
 <body>
@@ -9,8 +10,7 @@
 
 
 <template name="main">
-
-    <h1>Int'l Student App</h1>
+    <!-- <h1>Int'l Student App</h1> -->
     {{> navigation}}
      {{> yield}}
     <hr />
@@ -19,8 +19,8 @@
 
 <template name="home">
   <h1>This is the home page</h1>
-
 </template>
+
 <template name="chatPage">
   <!-- <h1>This is the home page</h1> -->
   {{#if currentUser}}
@@ -44,42 +44,91 @@
 </template>
 
 <template name="navigation">
-<ul>
 
-       <li><a href="/">Home</a></li>
-    {{#if currentUser}}
-      <li><a href="{{pathFor route='chatPage'}}">Chat Page</a></li>
-        <li><a href="#" class="logout">Logout</a></li>
-    {{else}}
-        <li><a href="{{pathFor route='register'}}">Register</a></li>
-        <li><a href="{{pathFor route='login'}}">Login</a></li>
+      <nav id="page-top" class="navbar navbar-default ">
+          <div class="container">
+              <div class="navbar-header page-scroll">
 
-    {{/if}}
-    </ul>
+                  <a class="navbar-brand" href="#page-top">International Student Chat</a>
+              </div>
+
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav navbar-right">
+                      <li class="hidden">
+                          <a href="#page-top"></a>
+                      </li>
+
+                      <li class="page-scroll">
+                        <a href="/">Home</a>
+                      </li>
+                      <li class="page-scroll">
+                          <a href="#about">About</a>
+                      </li>
+                      <li class="page-scroll">
+                          <a href="#contact">Contact</a>
+                      </li>
+
+                      {{#if currentUser}}
+                     <li class="page-scroll">
+                       <a href="{{pathFor route='chatPage'}}">Chat Page</a>
+                     </li>
+                       <li class="page-scroll">
+                       <a href="#" class="logout">Logout</a>
+                      </li>
+
+                      {{else}}
+                      <li class="page-scroll">
+                        <a href="{{pathFor route='register'}}">Register</a>
+                        </li>
+                        <li class="page-scroll">
+                        <a href="{{pathFor route='login'}}">Login</a>
+                      </li>
+                      {{/if}}
+                  </ul>
+              </div>
+              <!-- /.navbar-collapse -->
+          </div>
+          <!-- /.container-fluid -->
+      </nav>
+
 </template>
 
 <template name="login">
-    <h2>Login</h2>
-    <form class="login">
-        <p>Email: <input type="email" name="email"></p>
-        <p>Password: <input type="password" name="password"></p>
-        <p><input type="submit" value="Login"></p>
-    </form>
+        <div class="container">
+            <div class="row">
+                <div class="col-mg-6 text-center">
+                        <h2 >Login</h2>
+                        <form class="login">
+                            <p>Email: <input type="email" name="email"></p>
+                            <p>Password: <input type="password" name="password"></p>
+                            <p><input type="submit" value="Login" class="btn btn-success btn-lg"></p>
+                        </form>
+                </div>
+            </div>
+        </div>
 </template>
 
 <template name="register">
-    <h2>Register</h2>
-    <form class="register">
-        <p>Email: <input type="email" name="email"></p>
-        <p>Password: <input type="password" name="password"></p>
-        <p><input type="submit" value="Register"></p>
-    </form>
+
+  <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-center">
+                    <h2 >Register</h2>
+                    <form>
+                  <p>Username: <input type="username" name="username"></p>
+                    <p>Email: <input type="email" name="email"></p>
+                    <p>Password: <input type="password" name="password"></p>
+                    <p><input type="submit" value="Register" class="btn btn-success btn-lg"></p>
+                  </form>
+              </div>
+          </div>
+        </div>
+
 </template>
 
 
-
 <template name = "showRooms">
-<h2>Room list</h2>
+<h2>OCAD Roomlist</h2>
   <ul>
       {{#each room}}
           <li>{{>roomItem}}</li>
@@ -89,9 +138,9 @@
 </template>
 
 <template name="roomItem">
-    <li>{{name}}
-    [<a href="#" class="delete-room">Delete</a>]
-    </li>
+    <li style="cursor: pointer; {{roomstyle}}"><h5>{{roomname}}</h5>
+  </li>
+  <a href="#" class="delete-room">Delete</a>
 </template>
 
 <template name="addRoom">
@@ -113,7 +162,7 @@
          <h5 class="text-center text-muted">Sign in to join!</h5>
          <div class="panel panel-info">
            <div class="panel-heading">
-             GROUP CHAT
+             <h4>Room: {{roomname}}</h4>
            </div>
            <div class="panel-body">
              <ul class="media-list">
