--- a/client/main.html
+++ b/client/main.html
@@ -146,7 +146,7 @@
 <template name="addRoom">
     <form>
         Create a room:
-        <input type="text" placeholder="Type a name here..." name="roomName">
+        <input type="text" placeholder="Type a name here..." name="roomname">
     </form>
 </template>
 
@@ -193,4 +193,22 @@
      </div>
 
    </div>
+</template>
+
+<template name="message">
+  <li class="media">
+    <div class="media-body">
+      <div class="media">
+        <a class="pull-left" href="#">
+        <img class="media-object img-circle img-responsive" src="http://www.karinakurman.com/profile_icon.png" />
+        </a>
+        <div class="media-body" >
+          {{text}}
+         <br />
+         <small class="text-muted"><strong>{{username}}</strong> | {{createdAt}}</small>
+         <hr />
+        </div>
+      </div>
+    </div>
+  </li>
 </template>
