--- a/imports/ui/message.html
+++ b/imports/ui/message.html
@@ -1,4 +1,4 @@
- <template name="message">
+ <!-- <template name="message">
    <li class="media">
      <div class="media-body">
        <div class="media">
@@ -8,10 +8,10 @@
          <div class="media-body" >
            {{text}}
           <br />
-          <small class="text-muted"><strong>{{email}}</strong> | {{createdAt}}</small>
+          <small class="text-muted"><strong>{{emails}}</strong> | {{createdAt}}</small>
           <hr />
          </div>
        </div>
      </div>
    </li>
- </template>
+ </template> -->
