--- a/client/main.html
+++ b/client/main.html
@@ -12,9 +12,11 @@
 <template name="main">
     <!-- <h1>Int'l Student App</h1> -->
     {{> navigation}}
+    <div class = "chat_Page">
      {{> yield}}
-    <hr />
-    <p>Copyright &copy; Karina Kurmanbayeva, 2017.</p>
+   </div>
+    <!-- <hr />
+    <p>Copyright &copy; Karina Kurmanbayeva, 2017.</p> -->
 </template>
 
 <template name="home">
@@ -144,7 +146,7 @@
 <template name="roomItem">
     <li style="cursor: pointer; {{roomstyle}}"><h5>{{roomname}}</h5>
   </li>
-  <a href="#" class="delete-room">Delete</a>
+  <!-- <a href="#" class="delete-room">Delete</a> -->
 </template>
 
 <template name="addRoom">
