--- a/imports/ui/chat.html
+++ b/imports/ui/chat.html
@@ -20,7 +20,7 @@
             <div class="title">{{roomname}}</div>
           </div>
 
-          <div class="panel-body">
+          <div class="panel-body" id = "chat">
             <ul class="media-list">
 
                 {{#each messages}}
@@ -56,46 +56,3 @@
   </div>
 
 </template>
-
-<!-- <template name="chat">
-  <div class="container">
-   <div class="row">
-
-      {{>showRooms}}
-
-     <div class="col-md-8">
-      <div class="chat_window">
-      <div class="top_menu">
-        <div class="buttons">
-          <div class="button close">
-          </div><div class="button minimize"></div>
-          <div class="button maximize">
-          </div>
-        </div>
-        <div class="title">{{roomname}}</div>
-      </div>
-      <ul class="messages_container">
-        {{#each messages}}
-          {{> message}}
-        {{/each}}
-
-      </ul>
-      {{#if currentUser}}
-      <div class="bottom_wrapper clearfix">
-          <form class="new-message">
-          <div class="message_input_wrapper">
-              <input type="text" name="text" class="message_input" placeholder="Type your message here..." />
-            </div>
-            <div class="send_message">
-              <div class="icon"></div>
-              <button type="submit" class="text">Send</button>
-
-            </div>
-        </form>
-      </div>
-        {{/if}}
-      </div>
-    </div>
-  </div>
-  </div>
-</template> -->
