--- a/imports/ui/homeFeed.html
+++ b/imports/ui/homeFeed.html
@@ -8,15 +8,31 @@
 
         {{> writeaPost}}
 
-<div class="title">{{roomname}}</div>
-        <div class="panel-body">
+        <div class="row row-centered">
+        <div class="col-xs-6 col-centered col-min">
+        <div class="title"><h2>{{topicname}}</h2></div>
+        </div>
+        </div>
+        <!-- <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            {{topicname}}
+          </div> -->
+          <div class="panel-body">
+            <ul class="media-list">
 
-                <ul class="posts-list">
                       {{#each posts}}
                         {{> post}}
                       {{/each}}
                 </ul>
           </div>
+        <!-- </div>
+
+      </div>
+    </div>
+  </div> -->
 
 
 </template>
@@ -27,13 +43,14 @@
   <div class="well">
     <form class="new-post" role="form">
      <h4>Share something</h4>
-      <div class="form-group" style="padding:14px;">
+      <div class="form-group" style="">
        <textarea type="text" class="form-control" name="text" placeholder="Update your status"></textarea>
      </div>
      <div class="selectTopics">
-
+       <h4> Select Topic(s): </h4>
          {{#each topic}}
-           <a href="#"><span class="badge">{{topicname}}</span></a>
+           <!-- <button class="badge">{{topicname}}</button> -->
+           <a class="topic-button" href="#" role="button">{{topicname}}</a>
          {{/each}}
 
        </div>
@@ -60,7 +77,7 @@
     <div class="col-xs-6 col-centered col-min">
       <div class="panel panel-default">
           <div class="panel-heading">
-              <small class="text-muted"><strong>{{username}}</strong> | {{createdAt}}</small>
+              <small class="text-muted"><strong>{{username}}</strong> | {{createdAt}} |  {{topicname}}  </small>
           </div>
           <div class="panel-body">
               {{text}}
@@ -85,7 +102,7 @@
     <div class="row">
     <div class = "col-xs-1">
       <div class = "rooms_side">
-          <h4>OCADU Rooms <span>(5)</span></h4>
+          <h4>Featured Topics at OCAD <span>(5)</span></h4>
         <div class="list-group">
           {{#each topic}}
         {{>topicItem}}
