topics page and general page
no posts yet

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,8 @@
 <head>
   <title>My Simple Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+     <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
+     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -19,9 +20,7 @@
     <p>Copyright &copy; Karina Kurmanbayeva, 2017.</p> -->
 </template>
 
-<template name="home">
-  <h1>This is the home page</h1>
-</template>
+
 
 <template name="chatPage">
   <!-- <h1>This is the home page</h1> -->
@@ -67,12 +66,6 @@
 
                       <li class="page-scroll">
                         <a href="/">Home</a>
-                      </li>
-                      <li class="page-scroll">
-                          <a href="#about">About</a>
-                      </li>
-                      <li class="page-scroll">
-                          <a href="#contact">Contact</a>
                       </li>
 
                       {{#if currentUser}}
