posts, topics work
user profile update

--- a/imports/ui/chat.html
+++ b/imports/ui/chat.html
@@ -20,7 +20,7 @@
             <div class="title">{{roomname}}</div>
           </div>
 
-          <div class="panel-body">
+          <div class="panel-body chat">
             <ul class="media-list">
 
                 {{#each messages}}
