--- a/client/main.html
+++ b/client/main.html
@@ -102,9 +102,13 @@
           <div class="signin-form">
               <h3>Register</h3>
             <form class="register-form">
-              <!-- <input type="username" name="username" placeholder="username"/> -->
+              <input type="username" name="username" placeholder="username"/> 
               <input type="email" name="email" placeholder="email"/>
               <input type="password" name="password" placeholder="password"/>
+
+              <input type="homecounty" name="homecounty" placeholder="homecounty"/>
+              <input type="language" name="language" placeholder="language"/>
+
               <button type="submit" value="Register" >Create</button>
               <p class="message-signin">Already registered? <a href="{{pathFor route='login'}}">Login</a></p>
             </form>
