emails changed to usernames

--- a/client/main.html
+++ b/client/main.html
@@ -85,7 +85,8 @@
       <div class="signin-form">
           <h3>Login</h3>
         <form class="login-form">
-          <input type="email" name="email" placeholder="email"/>
+          <!-- <input type="email" name="email" placeholder="email"/> -->
+          <input type="username" name="username" placeholder="username"/>
           <input type="password" name="password" placeholder="password"/>
           <button type="submit" value="Login" >login</button>
           <p class="message-signin">Already registered? <a href="{{pathFor route='register'}}">Create an account</a></p>
@@ -102,7 +103,7 @@
           <div class="signin-form">
               <h3>Register</h3>
             <form class="register-form">
-              <input type="username" name="username" placeholder="username"/> 
+              <input type="username" name="username" placeholder="username"/>
               <input type="email" name="email" placeholder="email"/>
               <input type="password" name="password" placeholder="password"/>
 
