--- a/client/main.html
+++ b/client/main.html
@@ -109,6 +109,7 @@
 
               <input type="homecounty" name="homecounty" placeholder="homecounty"/>
               <input type="language" name="language" placeholder="language"/>
+              <input type="university" name="university" placeholder="university"/>
 
               <button type="submit" value="Register" >Create</button>
               <p class="message-signin">Already registered? <a href="{{pathFor route='login'}}">Login</a></p>
