all topics work

--- a/imports/ui/feed.html
+++ b/imports/ui/feed.html
@@ -51,7 +51,28 @@
   </div>
 </template>
 
+<template name = "writePost">
 
+      <div class="col-md-7 col-sm-8">
+
+          <div class="status-upload">
+                  <form class="new-post">
+                      <textarea class="form-control new-post" name = "text" placeholder="What are you doing right now?" style="width:211;min-width:278px;max-width:618px;"></textarea>
+                      <ul>
+  											<li><a title="" data-toggle="tooltip" data-placement="bottom" data-original-title="Audio"><i class="fa fa-music"></i></a></li>
+  											<li><a title="" data-toggle="tooltip" data-placement="bottom" data-original-title="Video"><i class="fa fa-video-camera"></i></a></li>
+  											<li><a title="" data-toggle="tooltip" data-placement="bottom" data-original-title="Sound Record"><i class="fa fa-microphone"></i></a></li>
+  											<li><a title="" data-toggle="tooltip" data-placement="bottom" data-original-title="Picture"><i class="fa fa-picture-o"></i></a></li>
+  										</ul>
+                        <button class="btn btn-link active new-post" type="submit" style="color:#796dff;">Share</button>
+                  </form>
+
+
+
+
+          </div>
+      </div>
+  </Template>
 
 <Template name = "commentbox">
   <div class="panel-comments-container" style="padding:15px;">
@@ -68,6 +89,20 @@
 </div>
 </template>
 
+<Template name = "mostLiked">
+  <div class="col-lg-4 col-md-5 col-sm-4 hidden-xs">
+      <div class="panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Top posts </h3></div>
+          <div class="panel-body">
+            <!-- {{#each posts}}
+              {{> post}}
+            {{/each}} -->
+          </div>
+      </div>
+  </div>
+
+</Template>
 
 <template name="comment">
 
