--- a/imports/ui/chat.html
+++ b/imports/ui/chat.html
@@ -1,7 +1,7 @@
 <template name="chat">
 
-   <div class="container">
-    <div class="row">
+  <div class="container hero">
+      <div class="row">
       <div class = "col-md-4">
        {{>showRooms}}
       </div>
