--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,10 @@
 <head>
-  <title>My Simple Chat</title>
+  <title>Int'l Student Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
      <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
      <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="../imports/ui/Header-Dark.css">
+     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
             <div class="header-dark img" style="background-image:url(&quot;../images/tim-gouw-102425.jpg&quot;);">
                 <nav class="navbar navbar-default navigation-clean-search">
                     <div class="container">
-                        <div class="navbar-header"><a class="navbar-brand navbar-link" href="#">Company Name</a>
+                        <div class="navbar-header"><a class="navbar-brand navbar-link" href="#">Int'l Student Platform</a>
                             <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                         </div>
                         <div class="collapse navbar-collapse" id="navcol-1">
