--- a/imports/ui/feed.html
+++ b/imports/ui/feed.html
@@ -23,7 +23,7 @@
 
 
 
-              <div class="commentbox" >
+              <div class="commentbox" style="display:none;" >
                 {{>commentbox}}
               </div>
 
